it is necessary to strictly fix the height and width of the list so that at times when the list is empty (during search or when no videos are found) the styles do not jump

--- a/styles/style.css
+++ b/styles/style.css
@@ -251,6 +251,7 @@ ol {
 .content__list {
   position: relative;
   height: 298px;
+  width: 399px;
   display: flex;
   flex-direction: column;
   justify-content: start;
